# OpenXXZ

./: CMakeLists.txt  LICENSE  README.md  global_enum_struct.h
App/: OpenXXZ
CJSON/: cJSON.c  cJSON.h
Debug/: Debug.h
NetUtil/: HttpRequest.c  HttpRequest.h  MAC.c  MAC.h  NetStatus.c  UrlEn_DeCode.c  UrlEn_DeCode.h
OpenXXZ/: XXZGlobal.h  XXZMain.c
SoundCardDriver/: i2c_wm8960.ko  ralink_gdma.ko  snd-soc-mt76xx-i2s-ctl.ko  snd-soc-mt76xx-i2s.ko  snd-soc-mt76xx-machine.ko  snd-soc-mt76xx-pcm.ko  snd-soc-wm8960.ko
SoundUtils/: Recognize.c  Recorder.c  SoundUtils.h
Utils/: TimeUtils.c
